[gd_scene load_steps=2 format=3 uid="uid://dk7vdwevkwjod"]

[ext_resource type="Script" uid="uid://drgo4eer061ns" path="res://scenes/settings_menu/tabs/graphics_tab.gd" id="1_dnxrn"]

[node name="GraphicsTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnxrn")

[node name="ContentVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShowFPSCheckBox" type="CheckBox" parent="ContentVBox"]
layout_mode = 2
text = "Показывать FPS"

[node name="FullscreenCheckBox" type="CheckBox" parent="ContentVBox"]
layout_mode = 2
text = "Полноэкранный режим"
